Fixed color theme for text

--- a/pages/app.css
+++ b/pages/app.css
@@ -1,7 +1,7 @@
 h3 {
     margin-top: 20px!important;
     font-size:20px!important;
-    color: greenyellow;
+    /* color: greenyellow; */
     text-transform: uppercase;
 
 }
